--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ f<!DOCTYPE html>
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><path d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"/><path d="M12 12v9"/><path d="m8 17 4 4 4-4"/></svg>Utility Items</h4>
                                     <ul class="data-list">
-                                        <li><strong>Magic Dust:</strong> Drops from Dust Devils in Westfall. Puts target to sleep for 30s. Essential for groups without a Mage/Rogue/Hunter for CC.</li>
+                                        <li><strong>Magic Dust:</strong> Drops from Dust Devils in Westfall. Puts target to sleep for 30s. Invaluable for groups without a Mage/Rogue/Hunter for CC.</li>
                                         <li><strong>Magic Candle:</strong> Drops from Kobold Geomancers in Elwynn Forest (or AH). 
                                             <br><span style="color:#94A3B8; font-size:0.85em;">Use Case: High-range pulling tool for Prot Paladins/Warriors to safely pull packs without face-pulling the whole room.</span>
                                         </li>
