Update section headers for dungeon info

--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                         <div id="s4-info" class="tab-panel">
                             <div class="info-grid">
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Specs: Old Hillsbrad</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Old Hillsbrad Info</h4>
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 66-68</li>
                                         <li><strong>Bosses:</strong> Level 68</li>
@@ -927,7 +927,7 @@
                                     </ul>
                                 </div>
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Specs: Sethekk Halls</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Sethekk Halls Info</h4>
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 67-69</li>
                                         <li><strong>Bosses:</strong> Level 69</li>
@@ -1107,7 +1107,7 @@
                         <div id="end-info" class="tab-panel">
                             <div class="info-grid">
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Specs: Shattered Halls</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Shattered Halls Info</h4>
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 70-71</li>
                                         <li><strong>Bosses:</strong> Levels 71-72</li>
@@ -1116,7 +1116,7 @@
                                     </ul>
                                 </div>
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Specs: Shadow Labs</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Shadow Labs Info</h4>
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 69-71</li>
                                         <li><strong>Bosses:</strong> Level 72</li>
@@ -1125,7 +1125,7 @@
                                     </ul>
                                 </div>
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Specs: Steamvault</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Steamvaults Info</h4>
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Level 70</li>
                                         <li><strong>Bosses:</strong> Level 72</li>
@@ -1134,7 +1134,7 @@
                                     </ul>
                                 </div>
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Specs: Black Morass</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>Black Morass Info</h4>
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 70-71</li>
                                         <li><strong>Bosses:</strong> Level 72</li>
