Add Arcane Bomb and Hit Gear items to the list

--- a/index.html
+++ b/index.html
@@ -470,6 +470,8 @@
                                 <li>Farm these items <strong>now</strong> to speed up dungeon clearing later.</li>
                                 <li><strong>Magic Dust:</strong> 30s CC for non-mages.</li>
                                 <li><strong>Magic Candle:</strong> Ranged pull tool for Paladins/Warriors.</li>
+                                <li><strong>Arcane Bomb:</strong> AoE Silence for Engineers</li>
+                                <li><strong>Hit Gear:</strong> Stack hit gear. Hit rating scales based on level.</li>
                             </ul>
                         </div>
 
