--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                             <button class="tab-btn" onclick="switchTab(this, 'dest-sv')"><svg class="icon" viewBox="0 0 24 24"><path d="M12 2.69l5.74 5.87a7 7 0 0 0-9.9 0L13.69 14.5 12 12.69 2.1 2.5a7 7 0 0 0 9.9 0L6.31 8.5z"/></svg>Steamvault</button>
                             <button class="tab-btn" onclick="switchTab(this, 'dest-bm')"><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>Black Morass</button>
                             <button class="tab-btn" onclick="switchTab(this, 'end-info')"><svg class="icon" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>Dungeon Info</button>
-                            <button class="tab-btn" onclick="switchTab(this, 'end-gear')"><svg class="icon" viewBox="0 0 24 24"><path d="M6 3h12l4 6-10 10L2 9z"></path></svg>Notable Gear</button>
+                            <button class="tab-btn" onclick="switchTab(this, 'end-gear')"><svg class="icon" viewBox="0 0 24 24"><path d="M6 3h12l4 6-10 10L2 9z"></path></svg>Gear</button>
                         </div>
 
                         <div id="dest-shat" class="tab-panel active">
