--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
                             <button class="tab-btn" onclick="switchTab(this, 'dest-sv')"><svg class="icon" viewBox="0 0 24 24"><path d="M12 2.69l5.74 5.87a7 7 0 0 0-9.9 0L13.69 14.5 12 12.69 2.1 2.5a7 7 0 0 0 9.9 0L6.31 8.5z"/></svg>Steamvault</button>
                             <button class="tab-btn" onclick="switchTab(this, 'dest-bm')"><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>Black Morass</button>
                             <button class="tab-btn" onclick="switchTab(this, 'end-info')"><svg class="icon" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>Dungeon Info</button>
-                            <button class="tab-btn" onclick="switchTab(this, 'end-gear')"><svg class="icon" viewBox="0 0 24 24"><path d="M6 3h12l4 6-10 10L2 9z"></path></svg>Gear</button>
+                            <button class="tab-btn" onclick="switchTab(this, 'end-gear')"><svg class="icon" viewBox="0 0 24 24"><path d="M6 3h12l4 6-10 10L2 9z"></path></svg>Notable Gear</button>
                         </div>
 
                         <div id="dest-shat" class="tab-panel active">
@@ -1220,6 +1220,94 @@
                     </div>
                 </div>
             </div>
+
+            <!-- SOLO GRIND SECTION START -->
+            <div class="dungeon-card">
+                <div class="card-header" onclick="toggleCard(this)">
+                    <div class="header-content">
+                        <h3><svg class="icon" style="color: #F472B6;" viewBox="0 0 24 24"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><path d="M12 13v6"/><path d="M12 19l-3-3"/><path d="M12 19l3-3"/></svg>Solo Operations</h3>
+                        <span>Mob Grinding Locations</span>
+                    </div>
+                    <div class="lvl-badge" style="background: rgba(244, 114, 182, 0.1); color: #F472B6; border-color: #F472B6;">Solo</div>
+                </div>
+                <div class="card-body">
+                    <div class="content-padding">
+                        <div class="tldr-box" style="border-color: #F472B6; background: rgba(244, 114, 182, 0.05);">
+                            <div class="tldr-title" style="color: #F472B6;"><svg class="icon" viewBox="0 0 24 24"><path d="M12 2a7 7 0 0 1 7 7c0 2.38-1.19 4.47-3 5.74V17a2 2 0 0 1-2 2H10a2 2 0 0 1-2-2v-2.26C6.19 13.47 5 11.38 5 9a7 7 0 0 1 7-7z"/><path d="M9 21h6"/></svg>TL;DR</div>
+                            <ul style="color: var(--portal-stone);">
+                                <li><strong>Plan B:</strong> Use if you have no group or to avoid launch day crowds.</li>
+                                <li><strong>Rule #1:</strong> Kill everything. Do NOT quest (save for Lvl 70 gold).</li>
+                                <li><strong>Rule #2:</strong> Stock food/water heavily. Layer hop if contested.</li>
+                            </ul>
+                        </div>
+
+                        <div class="tabs">
+                            <button class="tab-btn active" onclick="switchTab(this, 'grind-terokkar')"><svg class="icon" viewBox="0 0 24 24"><path d="M11 12h2a2 2 0 1 0 0-4h-2V6h2a2 2 0 1 1 0 4h-2v2z"/></svg>Terokkar (61-64)</button>
+                            <button class="tab-btn" onclick="switchTab(this, 'grind-nagrand')"><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="m4.93 4.93 4.24 4.24"/><path d="m14.83 14.83 4.24 4.24"/><path d="m14.83 9.17 4.24-4.24"/><path d="m4.93 19.07 4.24-4.24"/></svg>Nagrand (64-67)</button>
+                            <button class="tab-btn" onclick="switchTab(this, 'grind-nether')"><svg class="icon" viewBox="0 0 24 24"><path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/></svg>Netherstorm (67+)</button>
+                        </div>
+
+                        <div id="grind-terokkar" class="tab-panel active">
+                            <div class="info-grid">
+                                <div class="info-col">
+                                    <h4 style="color: #F472B6;">Levels 61-63: Arakkoa</h4>
+                                    <ul class="data-list">
+                                        <li><strong>Locations:</strong> Veil Reskk & Raastok Glade.</li>
+                                        <li><strong>Why:</strong> High density of humanoids (Netherweave/Silver).</li>
+                                        <li><strong>Backup:</strong> Tuurem (lower density, watch for high lvl adds).</li>
+                                    </ul>
+                                </div>
+                                <div class="info-col">
+                                    <h4 style="color: #F472B6;">Levels 62-64: Elves & Orcs</h4>
+                                    <ul class="data-list">
+                                        <li><strong>Locations:</strong> Firewing Point & Bonechewer Ruins.</li>
+                                        <li><strong>Loot:</strong> Firewing Signets (Aldor Rep).</li>
+                                        <li><strong>Note:</strong> Firewing mobs are casters (squishy but hurt). Bonechewer is great for Alliance (near Allerian Stronghold).</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="grind-nagrand" class="tab-panel">
+                            <div class="info-grid">
+                                <div class="info-col">
+                                    <h4 style="color: #F472B6;">Levels 64-67: Kil'sorrow Fortress</h4>
+                                    <ul class="data-list">
+                                        <li><strong>Location:</strong> Southern border of Nagrand.</li>
+                                        <li><strong>Density:</strong> Extremely high. Includes roaming patrols and buildings.</li>
+                                        <li><strong>Loot:</strong> Mark of Kil'jaeden (Aldor Rep).</li>
+                                        <li><strong>Strategy:</strong> Clear outside, move into buildings. Fast respawns mean you rarely need to move far.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="grind-nether" class="tab-panel">
+                            <div class="info-grid">
+                                <div class="info-col">
+                                    <h4 style="color: #F472B6;">Levels 67-69: Manaforge B'naar</h4>
+                                    <ul class="data-list">
+                                        <li><strong>Location:</strong> Next to Area 52.</li>
+                                        <li><strong>Logistics:</strong> Huge advantage being next to a bank/vendor hub. Minimal downtime.</li>
+                                        <li><strong>Loot:</strong> Sunfury Signets (Scryer Rep).</li>
+                                    </ul>
+                                </div>
+                                <div class="info-col">
+                                    <h4 style="color: #F472B6;">Levels 69-70: Manaforge Duro</h4>
+                                    <ul class="data-list">
+                                        <li><strong>Location:</strong> Near Cosmowrench.</li>
+                                        <li><strong>Strategy:</strong> Stay here until 70. Very dense mob packs.</li>
+                                        <li><strong>Flight Path:</strong> Cosmowrench connects to Area 52 for quick banking.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- SOLO GRIND SECTION END -->
+
 <div class="chart-card">
             <div class="section-title"><svg class="icon" viewBox="0 0 24 24"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg> XP Efficiency (Bars per Clear)</div>
             <div class="xp-chart">
