Update reputation cap mechanics in index.html

--- a/index.html
+++ b/index.html
@@ -602,13 +602,14 @@
                                         <li><strong>Start in Ramparts:</strong> It is the introductory dungeon. Mobs are weaker, but XP density is lower. Your goal here is specifically to loot the <em>Ominous Letter</em> from the final boss.</li>
                                         <li><strong>Switch to Blood Furnace:</strong> BF has higher mob density and better XP per hour. Stay here until Level 62 or Honored (5999/6000).</li>
                                         <li><strong>Do NOT Quest:</strong> Saving Hellfire Peninsula quests for max level converts the XP reward into gold, netting you hundreds of extra gold for your flying mount.</li>
+                                        <li>Lower level dungeons get you just shy of Honored. Higher level dungeons (67+) get you past Honored.</li>
                                     </ul>
                                 </div>
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>Reputation Cap Mechanics</h4>
                                     <ul class="data-list">
                                         
-                                        <li><strong>The Cap:</strong> Normal difficulty dungeons only grant reputation up to 5999/6000 Honored. Once you hit this, you get 0 rep per kill.</li>
+                                        <li><strong>The Cap:</strong> Low level normal dungeons only grant reputation up to 5999/6000 Friendly. Once you hit this, you get 0 rep per kill. Higher level normal dungeons (67+) allow you to get past Honored.</li>
                                         <li><strong>Optimization:</strong> Stop running these dungeons exactly when you hit Honored. Further runs waste reputation potential that you could get later via Heroics or Quests.</li>
                                         <li><strong>Rep Goal:</strong> Reach Honored (5999/6000) so you are Revered and ready for heroics @ 70.</li>
                                     </ul>
