Update reputation details for various dungeons

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 61-62</li>
                                         <li><strong>Bosses:</strong> Levels 62-63</li>
-                                        <li><strong>Rep per Clear:</strong> ~750 rep</li>
+                                        <li><strong>Rep per Clear:</strong> ~750 Honor Hold rep</li>
                                         <li><strong>To Honored:</strong> ~12 Clears</li>
                                     </ul>
                                 </div>
@@ -709,7 +709,7 @@
                                     <ul class="data-list">
                                         <li><strong>XP Density:</strong> Slave Pens is small, linear, and packed with mobs. A good group can clear it in ~15-18 minutes yielding ~4 bars of XP.</li>
                                         <li><strong>The Skip:</strong> After the first boss, you can jump up a ledge to skip a nasty pack of trash mobs. This increases runs per hour significantly.</li>
-                                        <li><strong>Why not Underbog?</strong> Underbog is larger, has more spread-out mobs, and dangerous mechanics (spores, giants). It yields roughly 2.5 bars compared to SP's 4.0.</li>
+                                        <li><strong>Why not Underbog?</strong> Underbog is larger, has more spread-out mobs, and dangerous mechanics (fears, giants). It yields roughly 2.5 bars compared to SP's 4.0.</li>
                                     </ul>
                                 </div>
                                 <div class="info-col">
@@ -729,7 +729,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 62-64</li>
                                         <li><strong>Bosses:</strong> Level 64</li>
-                                        <li><strong>Rep per Clear:</strong> ~915 rep</li>
+                                        <li><strong>Rep per Clear:</strong> ~915 Cenarion rep</li>
                                         <li><strong>To Honored:</strong> ~10 Clears</li>
                                     </ul>
                                 </div>
@@ -887,7 +887,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 64-66</li>
                                         <li><strong>Bosses:</strong> Level 66</li>
-                                        <li><strong>Rep per Clear:</strong> ~990 rep</li>
+                                        <li><strong>Rep per Clear:</strong> ~990 Consortium rep</li>
                                         <li><strong>To Honored:</strong> ~9 Clears</li>
                                     </ul>
                                 </div>
@@ -975,7 +975,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 66-68</li>
                                         <li><strong>Bosses:</strong> Level 68</li>
-                                        <li><strong>Rep for One Clear:</strong> ~1150</li>
+                                        <li><strong>Rep for One Clear:</strong> ~1150 Keepers of Time rep</li>
                                         <li><strong style="color:var(--legion-ember);">DO NOT FARM</strong></li>
                                     </ul>
                                 </div>
@@ -984,7 +984,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 67-69</li>
                                         <li><strong>Bosses:</strong> Level 69</li>
-                                        <li><strong>Rep per Clear:</strong> ~1139</li>
+                                        <li><strong>Rep per Clear:</strong> ~1139 Lower City rep</li>
                                         <li><strong>To Honored:</strong> ~8 Clears</li>
                                     </ul>
                                 </div>
@@ -1164,7 +1164,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 70-71</li>
                                         <li><strong>Bosses:</strong> Levels 71-72</li>
-                                        <li><strong>Rep per Clear:</strong> ~1604</li>
+                                        <li><strong>Rep per Clear:</strong> ~1604 Honor Hold rep</li>
                                         <li><strong>To Revered:</strong> ~8 Clears</li>
                                     </ul>
                                 </div>
@@ -1173,7 +1173,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 69-71</li>
                                         <li><strong>Bosses:</strong> Level 72</li>
-                                        <li><strong>Rep per Clear:</strong> ~2012</li>
+                                        <li><strong>Rep per Clear:</strong> ~2012 Lower City rep</li>
                                         <li><strong>To Revered:</strong> ~6 Clears (from Honored)</li>
                                     </ul>
                                 </div>
@@ -1182,7 +1182,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Level 70</li>
                                         <li><strong>Bosses:</strong> Level 72</li>
-                                        <li><strong>Rep per Clear:</strong> ~1796</li>
+                                        <li><strong>Rep per Clear:</strong> ~1796 Cenarion rep</li>
                                         <li><strong>To Revered:</strong> ~7 Clears</li>
                                     </ul>
                                 </div>
@@ -1191,7 +1191,7 @@
                                     <ul class="data-list">
                                         <li><strong>Trash:</strong> Levels 70-71</li>
                                         <li><strong>Bosses:</strong> Level 72</li>
-                                        <li><strong>Rep per Clear:</strong> ~1110</li>
+                                        <li><strong>Rep per Clear:</strong> ~1110 Keepers of Time rep</li>
                                         <li><strong>To Revered:</strong> ~18 Clears</li>
                                     </ul>
                                 </div>
