--- a/index.html
+++ b/index.html
@@ -1207,8 +1207,8 @@
                                 </div>
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Shadow Labyrinth Loot</h4>
-                                    <div class="loot-item"><span class="loot-name loot-rare">Sonic Spear</span><span class="loot-meta">Hunter/Feral Stat Stick</span></div>
-                                    <div class="loot-item"><span class="loot-name loot-rare">Idol of the Emerald Dream</span><span class="loot-meta">BIS R-Druid Idol</span></div>
+                                    <div class="loot-item"><span class="loot-name loot-rare">Sonic Spear</span><span class="loot-meta">Hunter Stat Stick</span></div>
+                                    <div class="loot-item"><span class="loot-name loot-rare">Idol of the Emerald Queen</span><span class="loot-meta">BIS R-Druid Idol</span></div>
                                 </div>
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Black Morass Loot</h4>
