Update loot-meta description for Watcher's Cowl

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                                     </div>
                                     <div class="loot-item">
                                         <span class="loot-name loot-rare">Watcher's Cowl</span>
-                                        <span class="loot-meta">Rogue/Druid Helm (Honored)</span>
+                                        <span class="loot-meta">Healer Helm (Honored)</span>
                                     </div>
                                 </div>
                             </div>
