Update reward description for Cenarion Rep

--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
                                 <div class="info-col">
                                     <h4 style="color:var(--fel-deep)"><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="8" r="7"/><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"/></svg>Cenarion Rep</h4>
                                     <ul class="data-list">
-                                        <li><strong>Why run it?</strong> To finish off your Cenarion Expedition rep to Exalted for the Earthwarden staff or other rewards. Also holds the <em>Second Key Fragment</em> for Karazhan.</li>
+                                        <li><strong>Why run it?</strong> To finish off your Cenarion Expedition rep to Exalted for the Earthwarden mace or other rewards. Also holds the <em>Second Key Fragment</em> for Karazhan.</li>
                                         <li><strong>Difficulty:</strong> Easier than Shattered Halls for melee-heavy groups (Warriors/Rogues) due to fewer massive packs.</li>
                                     </ul>
                                 </div>
