Correct spelling of 'Staff of Beasts' in index.html

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                                         <span class="loot-meta">Caster Staff</span>
                                     </div>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-rare"><a href="https://www.wowhead.com/tbc/item=25761/staff-of-beasts" target="_blank">Staff of the Beast</a></span>
+                                        <span class="loot-name loot-rare"><a href="https://www.wowhead.com/tbc/item=25761/staff-of-beasts" target="_blank">Staff of Beasts</a></span>
                                         <span class="loot-meta">Feral/Hunter Staff</span>
                                     </div>
                                 </div>
