--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                                         
                                         <li><strong>The Cap:</strong> Low level normal dungeons only grant reputation up to 5999/6000 Friendly. Once you hit this, you get 0 rep per kill. Higher level normal dungeons (67+) allow you to get past Honored.</li>
                                         <li><strong>Optimization:</strong> Stop running these dungeons exactly when you hit Honored. Further runs waste reputation potential that you could get later via Heroics or Quests.</li>
-                                        <li><strong>Rep Goal:</strong> Reach Honored (5999/6000) so you are Revered and ready for heroics @ 70.</li>
+                                        <li><strong>Rep Goal:</strong> Reach Honored (5999/6000). Later (67+) reach Revered so you are ready for heroics @ 70. </li>
                                     </ul>
                                 </div>
                             </div>
