--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
         </div>
         <div class="music-info">
             <span class="music-label">Ambience</span>
-            <span class="music-track">Terokkar Forest</span>
+            <span class="music-track">Guts Theme Music</span>
         </div>
         <button id="music-toggle" class="music-btn" title="Play/Pause">
             <!-- Play Icon (Default) -->
@@ -615,7 +615,7 @@
             <div class="dungeon-card">
                 <div class="card-header" onclick="toggleCard(this)">
                     <div class="header-content">
-                        <h3><svg class="icon" style="color: #60A5FA;" viewBox="0 0 24 24"><path d="M10 2v7.31l-4.29 9.3a1 1 0 0 0 .9 1.39h10.78a1 1 0 0 0 .9-1.39L14 9.31V2"/><line x1="8.5" y1="2" x2="15.5" y2="2"/><path d="M14 9.3a6.5 6.5 0 1 1-4 0"/></svg>Pre-Patch Preparation</h3>
+                        <h3><svg class="icon" style="color: #60A5FA;" viewBox="0 0 24 24"><rect width="8" height="4" x="8" y="2" rx="1" ry="1"/><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"/><path d="m9 14 2 2 4-4"/></svg>Pre-Patch Preparation</h3>
                         <span>Consumables & Engineering Tools</span>
                     </div>
                     <div class="lvl-badge" style="background: rgba(96, 165, 250, 0.1); color: #60A5FA; border-color: #60A5FA;">Prep</div>
